2010-04-03  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (arglist-dispatch): Handle method qualifiers.
	(print-arg): Renamed from princ-arg.
	(prin1-arg): Removed.
	* slime-autodoc.el (autodoc.1): Add test-case for method qualifiers

2010-03-30  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (*arglist-show-packages*): New
	customization variable, when non-nil show qualified symbols.
	(with-arglist-io-syntax): new macro for respecting the above variable.
	(decoded-arglist-to-string, decoded-arglist-to-template-string): Use
	the macro above.

2010-03-23  Tobias C. Rittweiler  <tcr@freebits.de>

	Do not do an unnecessary autodoc RPC request in case we're not
	actually inside a form.

	* slime-autodoc.el (slime-make-autodoc-rpc-form): Return nil if
	not inside a form.
	(slime-autodoc): Adapted accordingly to propagate nil to eldoc.

2010-03-20  Stas Boukarev  <stassats@gmail.com>

	* slime-c-p-c.el, slime-fuzzy.el: Don't define keys on slime-repl-mode-map
	if slime-repl isn't loaded.
	* slime-presentations.el: Refuse to load if slime-repl isn't loaded.
	Reported by Robert Goldman.

2010-03-13  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el: use slime-from-lisp-filename so that slime-tramp can work.
	Reported by Peter Stirling.

2010-03-12  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (extract-local-op-arglists (eql 'labels)):
	Fix (labels ((name |))).

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (arglist-ref): Don't error if a &key name isn't
	a :keyword symbol. And also handle non-:keyword keyword parameters.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-presentations.lisp (inspect-presentation): Throw an error when
	trying to access unrecorded object.
	(lookup-presented-object-or-lose): Rename from `get-repl-result'.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-call-defun): When on defclass insert
	 (make-instance 'name).
